--- a/app/src/main/res/layout/fragment_user_login.xml
+++ b/app/src/main/res/layout/fragment_user_login.xml
@@ -52,24 +52,18 @@
                 android:inputType="textPassword"
                 />
         </com.google.android.material.textfield.TextInputLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <com.google.android.material.switchmaterial.SwitchMaterial
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/switcher"
-            android:checked="true"
-            android:layout_marginLeft="100dp"
-            android:text="Student"/>
-            <TextView
-                android:layout_marginTop="13dp"
-                android:textColor="@color/black"
+
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/switcher"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/switcher"
-                android:text="Faculty"/>
-        </RelativeLayout>
+                android:layout_height="match_parent"
+                android:layout_marginStart="30dp"
+                android:checked="true"
+
+                android:text="Faculty" />
+
+
         <Button
             android:layout_marginTop="20dp"
             android:id="@+id/loginuser"
